--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header" flex flex-row flex-space-between *ngIf="showBigOn">
-    <img id="logo" src="assets/icons/snmr.png" alt="snmr">
+    <img id="logo" src="assets/logo/snmr.png" alt="snmr">
     <h2>Rhumato Scores</h2>
     <a href="cmd://webview-close" *ngIf="!isDesktopDevice()">
         <img src="assets/icons/close.png" alt="" class="close">
