--- a/src/app/components/score/entry/score.entry.component.html
+++ b/src/app/components/score/entry/score.entry.component.html
@@ -1,9 +1,9 @@
 <li (click)="open()">
     <a href="javascript:void(0)">
         <h4>{{ score.title }}</h4>
-        <p class="text-muted">{{ score.pathology }}</p>
+        <p class="text-muted">{{ score.subtitle }}</p>
     </a>
-    <div *ngIf="!score.owner">
+    <div *ngIf="!score.openIn">
         <i class="fal fa-link"></i>
     </div>
 </li>
