--- a/src/app/components/score/list/score.list.component.scss
+++ b/src/app/components/score/list/score.list.component.scss
@@ -1,8 +1,1 @@
-@import '../../../../scss/color.scss';
-
-.scoresList {
-    overflow-y: auto;
-    padding: 0;
-    margin: 0;
-    color: $gray;
-}
+@import '../../../../scss/theme.scss';
