--- a/src/app/page/front.page.html
+++ b/src/app/page/front.page.html
@@ -1,7 +1,7 @@
-<div class="content" [ngClass]="{'viewer-opened': openViewer}" flex flex-column>
-    <div class="list" *ngIf="!openViewer">
+<div class="content" [ngClass]="{'viewer-opened': openIn}" flex flex-column>
+    <div class="list" *ngIf="!openIn">
         <app-search (searchValueChange)="filterScoresListe($event)"></app-search>
         <app-score-list [scores]="scoresList"></app-score-list>
     </div>
-    <div class="viewer" *ngIf="openViewer"></div>
+    <div class="viewer" *ngIf="openIn"></div>
 </div>
