--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,16 +1,10 @@
 <div class="footer" *ngIf="!hide">
     <div class="nav">
-        <div class="nav-item" (click)="filter()" [ngClass]="{active: activated==='all'}">
-            <i class=" fal fa-list"></i>
-            <div class="nav-item-title"> Tous</div>
-        </div>
-        <div class="nav-item" (click)="filter(1)" [ngClass]="{active: activated==='activity'}">
-            <i class="fal fa-monitor-heart-rate"></i>
-            <div class="nav-item-title"> Activité</div>
-        </div>
-        <div class="nav-item" (click)="filter(2)" [ngClass]="{active: activated==='diagnostic'}">
-            <i class="fal fa-stethoscope"></i>
-            <div class="nav-item-title"> Diagnostic</div>
+        <div class="nav-item" (click)="filter(menuItem)" [ngClass]="{active: activated === menuItem.title}" *ngFor="let menuItem of menuItems">
+            <div class="menu-item-icon" *ngIf="menuItem.icon.type === 'fontawesome'" [innerHTML]="menuItem.icon.path"></div>
+            <div class="menu-item-icon" *ngIf="menuItem.icon.type === 'image'"><img src="assets/image.png" class="menuImageResized"></div>
+
+            <div class="nav-item-title"> {{ menuItem.title }}</div>
         </div>
     </div>
 </div>
