--- a/src/app/page/front.page.scss
+++ b/src/app/page/front.page.scss
@@ -19,6 +19,7 @@
 
         #logo {
             height: 80px;
+            // if logo is an image, set : height: 50px; margin-left: 15px;
         }
 
         .close {
