--- a/src/app/components/score/entry/score.entry.component.html
+++ b/src/app/components/score/entry/score.entry.component.html
@@ -4,6 +4,7 @@
         <p class="text-muted">{{ score.subtitle }}</p>
     </a>
     <div *ngIf="!score.openIn">
+        <!-- if openInLogo is an image, use this : <img src="assets/image.png" alt="" class="openInLogoResized"> -->
         <i class="fal fa-link"></i>
     </div>
 </li>
