--- a/src/app/components/score/list/score.list.component.scss
+++ b/src/app/components/score/list/score.list.component.scss
@@ -1,1 +1,8 @@
 @import '../../../../scss/theme.scss';
+
+.scoresList {
+  overflow-y: auto;
+  padding: 0;
+  margin: 0;
+  color: $scoresListColor;
+}
