--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -1,6 +1,21 @@
+/******************************************************* INSERT IN THIS FILE ALL THE GLOBAL STYLE PROPERTIES *******************************************************/
+
 /*******************************************************
-  INSERT IN THIS FILE ALL THE GLOBAL STYLE PROPERTIES
+                       Theme colors
 *******************************************************/
+$mainFontFamily: -apple-system, "Helvetica Neue", Roboto, "Segoe UI", sans-serif;
+
+$headerBackgroundColor: rgb(37, 64, 143);
+$headerFontColor: white;
+
+$footerBackgroundColor: white;
+$footerFontColor: rgb(37, 64, 143);
+
+$linkColor: rgb(37, 64, 143);
+
+$scoreEntryBackgroundColor: white;
+
+$scoresListColor: rgb(68, 68, 68);
 
 /*******************************************************
                         Font
@@ -9,7 +24,7 @@ body {
   margin:0;
   padding:0;
   color: white;
-  font-family: -apple-system, "Helvetica Neue", Roboto, "Segoe UI", sans-serif;
+  font-family: $mainFontFamily;
   max-width: 100vw;
   background-color: white;
 
@@ -61,242 +76,16 @@ $blue: rgb(37, 64, 143);
 }
 
 [flex-align-left] {
-  align-items: left;
+  align-items: flex-start;
 }
 
 /*******************************************************
-                        Header
+                       Images Sizes
 *******************************************************/
-.header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-
-  background-color: #25408f;
-  align-items: center;
-
-  h2 {
-    text-align: center;
-  }
-
-  #logo {
-    height: 80px;
-  }
-
-  .close {
-    width: 24px;
-    height: 24px;
-    margin-right: 8px;
-  }
-
-  &.small {
-    height: 40px;
-    padding-right: 12px;
-
-    strong {
-      align-self: center;
-    }
-
-    i {
-      font-size: 32px;
-      padding: 0 12px;
-    }
-  }
+.openInLogoResized {
+  height: 30px;
 }
 
-/*******************************************************
-                        Footer
-*******************************************************/
-.footer {
-  background-color: white;
-  border-top: solid 1px #eee;
-  color: black;
-
-  height: 60px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  .nav {
-    margin: 0;
-    padding: 0;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-
-    .nav-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      opacity: .6;
-
-      i {
-        color: $blue;
-      }
-
-      .nav-item-title {
-        margin-top: 4px;
-        color: $blue;
-      }
-
-      &:hover {
-        opacity: 1;
-      }
-
-      &.active {
-        opacity: 1;
-      }
-    }
-  }
-}
-
-/*******************************************************
-                       Score Entry
-*******************************************************/
-li {
-  &.filter-btn {
-    padding: 0;
-    height: 42px;
-    line-height: 42px;
-    display: flex;
-    flex-direction: row;
-
-    .filter {
-      flex-grow: 1;
-      text-align: center;
-      height: 100%;
-    }
-
-    .filter:nth-child(1) {
-      border-right: solid 1px lighten($gray, 20%);
-    }
-  }
-
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-
-  background-color: white;
-  list-style-type: none;
-  border-bottom: solid 1px #ececec;
-  padding: 16px;
-  white-space: normal;
-
-  a {
-    font-weight: 400;
-    color: $gray;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -moz-tap-highlight-color: rgba(0, 0, 0, 0);
-    -o-tap-highlight-color: rgba(0, 0, 0, 0);
-
-    h4 {
-      text-transform: uppercase;
-      padding: 0;
-      margin: 0;
-      font-weight: normal;
-      font-size: 16px;
-    }
-
-    .text-muted {
-      margin: 0;
-      font-size: 85%;
-      color: rgb(160, 160, 160);
-      font-style: italic;
-    }
-
-    display: block;
-    text-decoration: none;
-  }
-
-  i {
-    color: rgb(160, 160, 160);
-  }
-}
-
-li.contact {
-  margin-bottom: 80px !important;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-
-  &.last-entry {
-    border: none;
-  }
-
-  p {
-    font-size: small;
-    text-align: center;
-    line-height: 17px;
-
-    a {
-      color: $blue;
-    }
-  }
-}
-
-/*******************************************************
-                       Score List
-*******************************************************/
-.scoresList {
-  overflow-y: auto;
-  padding: 0;
-  margin: 0;
-  color: $gray;
-}
-
-/*******************************************************
-                        Search
-*******************************************************/
-#search {
-  position: fixed;
-  top: 80px;
-  width: 100%;
-  height: 32px;
-
-  color: #a0a0a0;
-
-  .zone {
-    background-color: #f2f2f2;
-    width: 100%;
-    align-items: center;
-
-    button {
-      border: none;
-      background-color: transparent;
-
-      img {
-        width: 16px;
-        height: 16px;
-      }
-    }
-
-    .fa-search {
-      padding: 8px;
-    }
-
-    input {
-      width: 97%;
-      height: 30px;
-      line-height: normal;
-      background-color: transparent;
-      border: none;
-      color: #444;
-      outline: none;
-      font-size: small;
-    }
-
-    // hack to disable iphone zoom on input
-    input,
-    input:active,
-    input:focus,
-    input:focus-within,
-    input:hover,
-    input:visited {
-      font-size: 16px !important;
-    }
-  }
+.menuImageResized {
+  height: 15px;
 }
