--- a/src/app/components/app/entry/app.entry.component.scss
+++ b/src/app/components/app/entry/app.entry.component.scss
@@ -24,7 +24,7 @@ li {
   justify-content: space-between;
   align-items: center;
 
-  background-color: $scoreEntryBackgroundColor;
+  background-color: $appEntryBackgroundColor;
   list-style-type: none;
   border-bottom: solid 1px #ececec;
   padding: 16px;
