--- a/src/app/page/front.page.scss
+++ b/src/app/page/front.page.scss
@@ -69,7 +69,7 @@
 
         $gray: rgb(68, 68, 68);
 
-        .scoresList {
+        .appsList {
             overflow-y: auto;
             padding: 0;
             margin: 0;
