--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -13,9 +13,9 @@ $footerFontColor: rgb(37, 64, 143);
 
 $linkColor: rgb(37, 64, 143);
 
-$scoreEntryBackgroundColor: white;
+$appEntryBackgroundColor: white;
 
-$scoresListColor: rgb(68, 68, 68);
+$appsListColor: rgb(68, 68, 68);
 
 /*******************************************************
                         Font
