--- a/src/app/components/app/list/app.list.component.scss
+++ b/src/app/components/app/list/app.list.component.scss
@@ -1,8 +1,8 @@
 @import '../../../../scss/theme.scss';
 
-.scoresList {
+.appsList {
   overflow-y: auto;
   padding: 0;
   margin: 0;
-  color: $scoresListColor;
+  color: $appsListColor;
 }
