--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,8 +3,8 @@
         <div *ngFor="let footerItem of footerItems">
                 <div class="nav-item" (click)="filter(footerItem.footerCategory);" [ngClass]="{active: activated===footerItem.footerCategory}">
                     <div class="menu-item-icon" *ngIf="footerItem.footerIcon.footerIconType === 'fontawesome'" [innerHTML]="footerItem.footerIcon.footerIconPath"></div>
-                    <div class="menu-item-icon" *ngIf="footerItem.footerIcon.footerIconType === 'image'"><img src="assets/image.png" class="menuImageResized"></div>
-                    <div class="nav-item-title">{{ footerItem.footerTitle }}</div>
+                    <div class="menu-item-icon" *ngIf="footerItem.footerIcon.footerIconType === 'image'"><img src="{{ footerItem.footerIcon.footerIconPath }}" class="menuImageResized"></div>
+                    <div class="nav-item-title">{{ footerItem.footerCategory }}</div>
                 </div>
             </div>
     </div>
