--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
-<div class="footer" *ngIf="!hide" [ngStyle]="{'color': this.data.appData.footerData[0].footerColor}">
+<div class="footer" *ngIf="!hide" [ngStyle]="{'color': this.data.appData.headerData.appColor}">
     <div class="nav">
         <div *ngFor="let footerItem of footerItems">
                 <div class="nav-item" (click)="filter(footerItem.footerCategory);" [ngClass]="{active: activated===footerItem.footerCategory}">
-                    <div class="menu-item-icon" *ngIf="footerItem.footerIcon.footerIconType === 'fontawesome'" [innerHTML]="footerItem.footerIcon.footerIconPath"></div>
-                    <div class="menu-item-icon" *ngIf="footerItem.footerIcon.footerIconType === 'image'"><img src="{{ footerItem.footerIcon.footerIconPath }}" class="menuImageResized"></div>
+                    <div class="menu-item-icon" *ngIf="footerItem.footerIconType === 'fontawesome'" [innerHTML]="footerItem.footerIconPath"></div>
+                    <div class="menu-item-icon" *ngIf="footerItem.footerIconType === 'image'"><img src="{{ footerItem.footerIconPath }}" class="menuImageResized"></div>
                     <div class="nav-item-title">{{ footerItem.footerCategory }}</div>
                 </div>
             </div>
