--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
-<div class="header" [ngStyle]="{'background-color': data.appData.headerData.headerBgColor}" flex flex-row flex-space-between *ngIf="inApp">
+<div class="header" [ngStyle]="{'background-color': data.appData.headerData.appColor}" flex flex-row flex-space-between *ngIf="inApp">
     <img id="logo" src="{{ data.appData.headerData.headerLogo }}" alt="snmr">
     <h2>{{ data.appData.headerData.headerTitle }}</h2>
     <a href="cmd://webview-close" *ngIf="!isDesktopDevice()">
-        <!--<img src="assets/icons/close.png" alt="" class="close">-->
+        <img src="assets/icons/close.png" alt="" class="close">
     </a>
-    <div *ngIf="isDesktopDevice()"></div>
+    <!--<div *ngIf="isDesktopDevice()"></div>-->
 </div>
 
 <div class="header small" [ngStyle]="{'background-color': '#25408f'}" flex flex-row flex-space-between *ngIf="!inApp">
