--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -1,14 +1,15 @@
 #search {
   position: fixed;
-  top: 80px;
+  top: 68px;
   width: 100%;
-  height: 32px;
+  height: 45px;
 
   color: #a0a0a0;
 
   .zone {
     width: 100%;
     align-items: center;
+    margin-top: 6px;
 
     button {
       border: none;
