--- a/src/app/components/app/entry/app.entry.component.html
+++ b/src/app/components/app/entry/app.entry.component.html
@@ -1,4 +1,4 @@
-<li (click)="open()" *ngIf="currentCategory === null || app.appCategories.indexOf(currentCategory) > -1 ">
+<li (click)="open()" *ngIf="currentCategory === 'Tout' || app.appCategory === currentCategory ">
     <div>
         <a>
             <h4>{{ app.appTitle }}</h4>
@@ -6,7 +6,7 @@
         </a>
     </div>
     <div>
-        <div *ngIf="!app.isExternalLink">
+        <div *ngIf="app.isExternalLink">
             <!-- if openInLogo is an image, use this : <img src="assets/image.png" alt="" class="openInLogoResized"> -->
             <i class="fal fa-link"></i>
         </div>
