--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -18,6 +18,10 @@
     flex-direction: row;
     justify-content: space-around;
 
+    .width {
+      width: 33.3%;
+    }
+
     .nav-item {
       display: flex;
       flex-direction: column;
