Init. commit app video

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header" [ngStyle]="{'background-color': data.appData.headerData.appColor}" flex flex-row flex-space-between *ngIf="inApp">
-    <img id="logo" src="{{ data.appData.headerData.headerLogo }}" alt="snmr">
+    <!--<img id="logo" src="{{ data.appData.headerData.headerLogo }}" alt="snmr">-->
     <h2>{{ data.appData.headerData.headerTitle }}</h2>
     <a href="cmd://webview-close" *ngIf="!isDesktopDevice()">
         <img src="assets/icons/close.png" alt="" class="close">
