--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -28,6 +28,7 @@
       align-items: center;
       justify-content: center;
       opacity: .6;
+      cursor: pointer;
 
       .nav-item-title {
         margin-top: 4px;
