Correction contact (au cas où)

--- a/src/app/components/app/entry/app.entry.component.html
+++ b/src/app/components/app/entry/app.entry.component.html
@@ -15,9 +15,6 @@
 
 <li *ngIf="lastEntry" [ngClass]="{'last-entry': lastEntry, 'contact': true}" (click)="contactUs()">
     <p class="copyright">
-        Rhumato Scores&copy;2019<br>
-        Par le Syndicat National des Médecins Rhumatologues
-        <br>
-        <a href="#">Demander d'autres scores</a>
+        <a href="#">Demander d'autres vidéos</a>
     </p>
 </li>
