--- a/src/app/components/app/list/app.list.component.scss
+++ b/src/app/components/app/list/app.list.component.scss
@@ -6,3 +6,24 @@
   margin: 0;
   color: $appsListColor;
 }
+
+li.contact {
+  margin-bottom: 80px !important;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  &.last-entry {
+    border: none;
+  }
+
+  p {
+    font-size: small;
+    text-align: center;
+    line-height: 17px;
+
+    a {
+      color: $blue;
+    }
+  }
+}
