--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
-<div class="footer" *ngIf="!hide" [ngStyle]="{'color': this.data.appData.headerData.appColor}">
+<div class="footer" *ngIf="!hide" [ngStyle]="{'color': this.data.appData.appColor}">
     <div class="nav">
         <div class="width" *ngFor="let footerItem of footerItems">
-                <div class="nav-item" (click)="filter(footerItem.footerCategory);" [ngClass]="{active: activated===footerItem.footerCategory}">
+                <div class="nav-item" (click)="filter(footerItem.footerCategory);" [ngClass]="{active: activated===footerItem.footerCategory}" [ngStyle]="{'color': footerItem.footerColor}">
                     <div class="menu-item-icon" *ngIf="footerItem.footerIconType === 'fontawesome'" [innerHTML]="footerItem.footerIconPath"></div>
                     <div class="menu-item-icon" *ngIf="footerItem.footerIconType === 'image'"><img src="{{ footerItem.footerIconPath }}" class="menuImageResized"></div>
                     <div class="nav-item-title">{{ footerItem.footerCategory }}</div>
