--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -19,23 +19,32 @@
   }
 
   .close {
-    width: 24px;
-    height: 24px;
-    margin-right: 8px;
+    width: 32px;
+    height: 32px;
+    margin-right: 16px;
+
+    i {
+        font-size: 32px;
+        padding: 0 12px;
+    }
+  }
+
+  i {
+      font-size: 44px;
+      padding: 0 12px;
   }
 
   &.small {
-    height: 40px;
+    height: 60px;
     padding-right: 12px;
+
+    h2 {
+      margin-right: 42px;
+    }
 
     strong {
       align-self: center;
-    }
-
-    i {
-      font-size: 32px;
-      padding: 0 12px;
+      margin-right: 42px;
     }
   }
 }
-
