feature sanofi : add json, logo

--- a/src/app/components/app/entry/app.entry.component.scss
+++ b/src/app/components/app/entry/app.entry.component.scss
@@ -56,6 +56,10 @@ li {
     text-decoration: none;
   }
 
+  .fa-container-externalLink {
+    margin-left: 10px;
+  }
+
   i {
     color: rgb(160, 160, 160);
   }
