--- a/src/app/components/app/entry/app.entry.component.html
+++ b/src/app/components/app/entry/app.entry.component.html
@@ -6,7 +6,7 @@
         </a>
     </div>
     <div>
-        <div *ngIf="app.isExternalLink">
+        <div *ngIf="app.isExternalLink" class="fa-container-externalLink">
             <!-- if openInLogo is an image, use this : <img src="assets/image.png" alt="" class="openInLogoResized"> -->
             <i class="fal fa-link"></i>
         </div>
