--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,13 +4,16 @@
   position: fixed;
   top: 0;
   width: 100%;
-
+  height: 75px;
   //background-color: blue;
   align-items: center;
 
   h2 {
     text-align: center;
     width: 100%;
+    @media (max-width: 400px) {
+      font-size: 1.2em;
+    }
   }
 
   #logo {
