--- a/src/app/page/front.page.scss
+++ b/src/app/page/front.page.scss
@@ -1,5 +1,5 @@
 .content {
-    margin-top: 112px !important;
+    margin-top: 120px !important;
 
     height: 100%;
     overflow: auto;
@@ -7,6 +7,10 @@
     &.viewer-opened {
         margin-top: 40px !important;
         height: auto;
+    }
+
+    &.no-searchBar {
+        margin-top: 75px !important;
     }
 
     .header {
