--- a/src/app/components/app/entry/app.entry.component.scss
+++ b/src/app/components/app/entry/app.entry.component.scss
@@ -29,6 +29,7 @@ li {
   border-bottom: solid 1px #ececec;
   padding: 16px;
   white-space: normal;
+  cursor: pointer;
 
   a {
     font-weight: 400;
