--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -11,6 +11,7 @@
   h2 {
     text-align: center;
     width: 100%;
+    margin-left: 48px;
     @media (max-width: 400px) {
       font-size: 1.2em;
     }
@@ -35,14 +36,16 @@
   i {
       font-size: 44px;
       padding: 0 12px;
+      cursor: pointer;
   }
 
   &.small {
-    height: 60px;
+    height: 75px;
     padding-right: 12px;
 
     h2 {
-      margin-right: 42px;
+      margin-right: 41px;
+      margin-left: 0;
     }
 
     strong {
