--- a/src/app/components/app/list/app.list.component.scss
+++ b/src/app/components/app/list/app.list.component.scss
@@ -1,5 +1,11 @@
 @import '../../../../scss/theme.scss';
-
+.no-results {
+  color: #444444;
+  padding: 0 2em 0 2em;
+  h3 {
+    font-weight: normal;
+  }
+}
 .appsList {
   overflow-y: auto;
   padding: 0;
