--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -35,14 +35,15 @@
   i {
       font-size: 44px;
       padding: 0 12px;
+      cursor: pointer;
   }
 
   &.small {
-    height: 60px;
+    height: 75px;
     padding-right: 12px;
 
     h2 {
-      margin-right: 42px;
+      margin-right: 41px;
     }
 
     strong {
