mise à jour icône

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -40,6 +40,10 @@
       &.active {
         opacity: 1;
       }
+
+      .menu-item-icon {
+          font-size: 1.4em !important;
+      }
     }
   }
 }
