--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,7 +4,7 @@
   background-color: $footerBackgroundColor;
   border-top: solid 1px #eee;
 
-  height: 60px;
+  height: 80px;
 
   display: flex;
   flex-direction: column;
@@ -27,6 +27,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      text-align: center;
       opacity: .6;
 
       .nav-item-title {
@@ -39,6 +40,10 @@
 
       &.active {
         opacity: 1;
+      }
+
+      .menu-item-icon {
+        font-size: 1.4em !important;
       }
     }
   }
