--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -14,6 +14,9 @@
     @media (max-width: 400px) {
       font-size: 1.2em;
     }
+    @media (max-width: 420px) {
+      font-size: 1.3em;
+    }
   }
 
   #logo {
