--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -11,6 +11,7 @@
   h2 {
     text-align: center;
     width: 100%;
+    margin-left: 48px;
     @media (max-width: 400px) {
       font-size: 1.2em;
     }
@@ -47,6 +48,7 @@
 
     h2 {
       margin-right: 41px;
+      margin-left: 0;
     }
 
     strong {
