--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,3 +9,10 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+section {
+    display: flex;
+    flex: 100%;
+    flex-direction: column;
+    height: 100vh;
+}
