--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,24 +4,29 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 75px;
+  height: 80px;
   //background-color: blue;
   align-items: center;
 
   h2 {
     text-align: center;
     width: 100%;
-    @media (max-width: 400px) {
-      font-size: 1.2em;
-    }
     @media (max-width: 420px) {
       font-size: 1.3em;
     }
+    @media (max-width: 400px) {
+      font-size: 1.2em;
+    }
+    @media (max-width: 320px) {
+      font-size: 1em;
+    }
+
   }
 
   #logo {
     // if logo is an image, set : height: 50px; margin-left: 15px;
     height: 80px;
+    margin-left: 0.3em;
   }
 
   .close {
