modif mise en page + update lien

--- a/src/app/components/app/list/app.list.component.html
+++ b/src/app/components/app/list/app.list.component.html
@@ -36,19 +36,19 @@
         </mat-grid-tile>
         <mat-grid-tile class="btn gray" colspan="1"
                        (click)="openDocDeepLink('https://app.360medics.com/document/9902',
-                       'medics://document-open?m_id=9902')">
+                       'medics://global-search?m_tab=rcp&m_value=actilyse')">
             RCP
             <br>Pradaxa
         </mat-grid-tile>
         <mat-grid-tile class="btn gray" colspan="1"
                        (click)="openDocDeepLink('https://app.360medics.com/document/14148',
-                       'medics://document-open?m_id=14148')">
+                       'medics://global-search?m_tab=rcp&m_value=pradaxa')">
             RCP
             <br>Praxbind
         </mat-grid-tile>
         <mat-grid-tile class="btn gray" colspan="1"
                        (click)="openDocDeepLink('https://app.360medics.com/document/225',
-                       'medics://document-open?m_id=225')">
+                       'medics://global-search?m_tab=rcp&m_value=praxhind')">
             RCP
             <br>Actilyse
         </mat-grid-tile>
