--- a/src/app/components/app/list/app.list.component.html
+++ b/src/app/components/app/list/app.list.component.html
@@ -16,6 +16,15 @@
         </li>
     </ul>
     <mat-grid-list class="grp-btn" cols="3" gutterSize="0.5em" rowHeight="3.5em">
+        <mat-grid-tile colspan="1">
+            <img src="./assets/logo/Pradaxa_Logo.png" style="max-width: 100%; max-height: 100%">
+        </mat-grid-tile>
+        <mat-grid-tile colspan="1">
+            <img src="./assets/logo/Actilyse_Logo.png" style="max-width: 100%; max-height: 100%">
+        </mat-grid-tile>
+        <mat-grid-tile colspan="1">
+            <img src="./assets/logo/PraxBind_Logo.png" style="max-width: 100%; max-height: 100%">
+        </mat-grid-tile>
         <mat-grid-tile class="btn blue" colspan="1"
                        (click)="openDocLink('https://360medics.com/q/083dddf9')">
             Bon usage
