Nouvel App pour Gallia qui remplace la précédente (update JSON & Header)

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -10,6 +10,7 @@
 
   h2 {
     text-align: center;
+    white-space: pre-line;
     width: 100%;
     @media (max-width: 400px) {
       font-size: 1.2em;
