--- a/src/app/components/app/list/app.list.component.scss
+++ b/src/app/components/app/list/app.list.component.scss
@@ -34,3 +34,16 @@ li.contact {
     }
   }
 }
+
+.textContent {
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%
+}
+.textTitle {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.text {
+  font-size: 14px;
+}
