--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,10 @@
 <div class="header" [ngStyle]="{'background-color': data.appData.appColor}" flex flex-row flex-space-between *ngIf="inApp">
+   <div class="logoCont">
     <img *ngIf="data.appData.headerData.headerLogo" id="logo" src="{{ data.appData.headerData.headerLogo }}" alt="logo" style="height:60px;">
+</div>
     <h2 [ngStyle]="{'color': data.appData.headerData.headerColor}">{{ data.appData.headerData.headerTitle }} <span style="display: block;">{{data.appData.headerData.headerTitle1}}</span></h2>
-    <img *ngIf="data.appData.headerData.headerSponso" src="{{ data.appData.headerData.headerSponso }}" alt="logo" style="max-height:60px;max-width:60px;">
-    <div *ngIf="isDesktopDevice()" style="width: 48px;"></div>
+    <!-- <img *ngIf="data.appData.headerData.headerSponso" src="{{ data.appData.headerData.headerSponso }}" alt="logo" style="max-height:60px;max-width:60px;">
+    <div *ngIf="isDesktopDevice()" style="width: 48px;"></div> -->
     <a href="cmd://webview-close" *ngIf="!isDesktopDevice()" class="close" [ngStyle]="{'color': data.appData.headerData.headerColor}">
         <!--<img src="assets/icons/close.png" alt="" class="close">-->
         <i class="fal fa-times"></i>
