--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 75px;
+  height: 65px;
   //background-color: blue;
   align-items: center;
 
@@ -13,18 +13,26 @@
     white-space: pre-line;
     width: 100%;
     @media (max-width: 400px) {
-      font-size: 1.2em;
+      font-size: 0.9em;
     }
     @media (max-width: 420px) {
-      font-size: 1.3em;
+      font-size: 0.9em;
     }
   }
 
   #logo {
     // if logo is an image, set : height: 50px; margin-left: 15px;
-    height: 80px;
+   width: 100%;
+    height: auto !important;
+    }
+  .logoCont {
+    display: flex;
+    margin-left: 5px;
+    align-items: center;
+    width: 75px;
+    height: 60px;
+    background-color: white;
   }
-
   .close {
     width: 32px;
     height: 32px;
