Update app.entry.component.ts, app.list.component.html, and 7 more files...

--- a/src/app/components/app/list/app.list.component.html
+++ b/src/app/components/app/list/app.list.component.html
@@ -7,7 +7,8 @@
     [app]="app"
     *ngFor="let app of apps; index as i"
     [activatedCategory]="activatedCategory"
-  ></app-entry>
+  > </app-entry>
+  <li class="otherLi"><a style="text-decoration: none;" class="" href="#" target="_blank" (click)="contactUs()">Demander mon guide de réintroduction des protéines du lait de vache papier</a></li>
   <div class="textContent">
     <p class="text">
       <span class="textTitle">Avis Important</span> : Le lait maternel constitue
