modification links and block 2 podcasts

--- a/src/app/components/app/list/app.list.component.html
+++ b/src/app/components/app/list/app.list.component.html
@@ -26,32 +26,32 @@
             <img src="./assets/logo/PraxBind_Logo.png" style="max-width: 100%; max-height: 100%">
         </mat-grid-tile>
         <mat-grid-tile class="btn blue" colspan="1"
-                       (click)="openDocLink('https://360medics.com/q/083dddf9')">
+                       (click)="openDocLink('http://360medics.com/q/c39d3d90')">
             Bon usage
             <br>Pradaxa
         </mat-grid-tile>
         <mat-grid-tile class="btn blue" colspan="1"
-                       (click)="openDocLink('https://360medics.com/q/e8d54b98')">
+                       (click)="openDocLink('http://360medics.com/q/9c62c231')">
             Bon usage
             <br>Praxbind
         </mat-grid-tile>
         <mat-grid-tile class="btn blue" colspan="1"
-                       (click)="openDocLink('https://360medics.com/q/8e109d78')">
+                       (click)="openDocLink('http://360medics.com/q/239032ef')">
             Bon usage
             <br>Actilyse
         </mat-grid-tile>
         <mat-grid-tile class="btn gray" colspan="1"
-                       (click)="openLink('https://360medics.com/q/fb676dcc')">
+                       (click)="openLink('http://360medics.com/q/fb676dcc')">
             RCP
             <br>Pradaxa
         </mat-grid-tile>
         <mat-grid-tile class="btn gray" colspan="1"
-                       (click)="openLink('https://360medics.com/q/20c60e36')">
+                       (click)="openLink('http://360medics.com/q/20c60e36')">
             RCP
             <br>Praxbind
         </mat-grid-tile>
         <mat-grid-tile class="btn gray" colspan="1"
-                       (click)="openLink('https://360medics.com/q/a7437654')">
+                       (click)="openLink('http://360medics.com/q/a7437654')">
             RCP
             <br>Actilyse
         </mat-grid-tile>
