translate to es

--- a/src/app/components/app/entry/app.entry.component.html
+++ b/src/app/components/app/entry/app.entry.component.html
@@ -1,6 +1,6 @@
 <li
   (click)="open()"
-  *ngIf="currentCategory === 'All' || app.appCategory === currentCategory"
+  *ngIf="currentCategory === 'Todo' || app.appCategory === currentCategory"
 >
   <div>
     <a>
