:traduction thanks message display

--- a/src/app/components/app/list/app.list.component.html
+++ b/src/app/components/app/list/app.list.component.html
@@ -8,5 +8,9 @@
             <br>
             <a href="#" target="_blank" (click)="contactUs()">Demander d'autres scores</a>
         </p>
+<div class="thankYou">
+    <p class="correctors">Revisado y corregido por:</p>
+    <p>Dr. Javier Cornago NavascuésMédico Adjunto Hematología y HemoterapiaHospital Universitario Fundación Jiménez DíazMadrid</p>
+</div>
     </li>
 </ul>
