--- a/src/app/page/front.page.scss
+++ b/src/app/page/front.page.scss
@@ -145,6 +145,14 @@
     }
 }
 
+.correctors {
+    position: absolute;
+    height: 100x;
+    font-size: 30px;
+    text-align: left;
+
+}
+
 iframe {
     width: 100%;
     margin-top:3vh;
