--- a/src/app/components/app/list/app.list.component.scss
+++ b/src/app/components/app/list/app.list.component.scss
@@ -7,6 +7,8 @@
   color: $appsListColor;
 }
 
+
+
 li.contact {
   margin-bottom: 80px !important;
   display: flex;
@@ -26,4 +28,16 @@ li.contact {
       color: $blue;
     }
   }
+}
+
+.thankYou {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  font-size: 12px
+}
+
+.correctors {
+  font-size: 13;
+  font-weight: bold;
 }
