--- a/src/app/page/front.page.html
+++ b/src/app/page/front.page.html
@@ -3,7 +3,10 @@
         <div *ngIf="searchResults !== null">
             <app-search [jsonData]="jsonData" (searchValueChange)="filterAppsList($event)" [searchBar]="searchResults"></app-search>
         </div>
-        <app-list [apps]="appsList" [data]="jsonData" [activatedCategory]="activatedCategory"></app-list>
+        <app-list [apps]="appsList" [data]="jsonData" [activatedCategory]="activatedCategory">
+        </app-list>
+        <div class="correctors">test</div>
     </div>
+   
     <div class="viewer" *ngIf="openIn"></div>
 </div>
