--- a/src/app/components/app/list/app.list.component.html
+++ b/src/app/components/app/list/app.list.component.html
@@ -10,7 +10,7 @@
         </p>
 <div class="thankYou">
     <p class="correctors">Revisado y corregido por:</p>
-    <p>Dr. Javier Cornago NavascuésMédico Adjunto Hematología y HemoterapiaHospital Universitario Fundación Jiménez DíazMadrid</p>
+    <p>Dr. Javier Cornago Navascués - Médico Adjunto Hematología y Hemoterapia del Hospital Universitario Fundación Jiménez Díaz en Madrid</p>
 </div>
     </li>
 </ul>
